2.2.6
 - docs: update bibliography
 - bump dclab from 0.29.0 to 0.29.1
2.2.5
 - setup: correct installation directory on Windows
 - setup: bump dclab from 0.27.11 to 0.29.0
 - fix: main window not focused after startup (#52)
2.2.4
 - fix: UI slot issues (probably a racing condition) in the
   analysis view; editing the viscosity for "other" medium not
   possible on frozen Windows and macOS application (#49)
2.2.3
 - fix: update Quick View plot when values for the Young's modulus
   computation are changed (#44)
 - fix: use fixed point size in Block Matrix
 - enh: improve plot matrix column/row visualization and show flow
   rate (#45)
 - docs: update visualization of Young's modulus look-up tables
   using new figure script from dclab
 - build: bump Python to 3.8 for Windows builds
 - setup: bump dclab from 0.27.5 to 0.27.11 (improvement of hierarchy
   child handling)
2.2.2
 - fix: correct box filter ranges when feature contains inf values
 - enh: add pretty tool icons from KDE breeze theme
2.2.1
 - fix: zero-division error when setting "one plot per dataset"
   for an empty plot (#41)
 - build: pin PyQt5 to 5.14.2 on Linux/macOS
2.2.0
 - setup: bump dclab from 0.26.2 to 0.27.5 (support for machine
   learning features)
 - fix: modify the GUI to enable box filtering for ml_score_???
   features
 - ref: pipeline.get_features now only returns features that are
   available (previously all features were returned when no
   datasets were in the pipeline)
2.1.6
 - fix: export file names were allowed to have invalid characters
 - fix: Quick View showed filtered events that were not plotted
   (statistics were computed correctly though)
 - fix: Quick View was not very informative when all events were
   filtered away - a message is now shown
 - setup: bump dclab from 0.26.1 to 0.26.2 (fix bin num computation
   using Doane's formula)
2.1.5
 - fix: marker hue feature data min/max was always computed even if