@@ -190,9 +190,6 @@
         </item>
         <item row="0" column="1">
          <widget class="QComboBox" name="comboBox_medium">
-          <property name="editable">
-           <bool>false</bool>
-          </property>
           <property name="currentIndex">
            <number>0</number>
           </property>
