@@ -40,6 +40,38 @@ def run_around_tests():
     session.clear_session()
 
 
+def test_empty_medium_string_should_offer_user_edit(qtbot):
+    mw = ShapeOut2()
+    qtbot.addWidget(mw)
+    # add fake measurement
+    path1 = make_dataset(medium=" ")
+    mw.add_dataslot(paths=[path1])
+    wsl = mw.widget_ana_view.widget_slot
+    ds = mw.pipeline.slots[0].get_dataset()
+    assert ds.config["setup"]["medium"] == " "
+    assert wsl.comboBox_medium.currentData() == "other"
+    assert not wsl.doubleSpinBox_visc.isReadOnly(), "Should be editable"
+    assert wsl.doubleSpinBox_visc.isEnabled(), "Should be editable"
+    assert np.isnan(wsl.__getstate__()["emodulus"]["emodulus temperature"])
+    assert wsl.__getstate__()["emodulus"]["emodulus medium"] == "other"
+    assert wsl.__getstate__()["emodulus"]["emodulus scenario"] is None
+
+
+def test_other_medium_viscosity_editable_issue_49(qtbot):
+    mw = ShapeOut2()
+    qtbot.addWidget(mw)
+    # add fake measurement
+    path1 = make_dataset(medium=None)
+    mw.add_dataslot(paths=[path1])
+    wsl = mw.widget_ana_view.widget_slot
+    ds = mw.pipeline.slots[0].get_dataset()
+    assert "medium" not in ds.config["setup"], "sanity check (medium removed)"
+    oidx = wsl.comboBox_medium.findData("other")
+    wsl.comboBox_medium.setCurrentIndex(oidx)
+    assert not wsl.doubleSpinBox_visc.isReadOnly(), "Should be editable"
+    assert wsl.doubleSpinBox_visc.isEnabled(), "Should be editable"
+
+
 @pytest.mark.filterwarnings(
     'ignore::dclab.features.emodulus.YoungsModulusLookupTableExceededWarning')
 def test_simple(qtbot):
@@ -95,22 +127,7 @@ def test_simple(qtbot):
         pass
 
 
-def test_other_medium_viscosity_editable_issue_49(qtbot):
-    mw = ShapeOut2()
-    qtbot.addWidget(mw)
-    # add fake measurement
-    path1 = make_dataset(medium=None, chip_region="channel")
-    mw.add_dataslot(paths=[path1])
-    wsl = mw.widget_ana_view.widget_slot
-    ds = mw.pipeline.slots[0].get_dataset()
-    assert "medium" not in ds.config["setup"], "sanity check (medium removed)"
-    oidx = wsl.comboBox_medium.findData("other")
-    wsl.comboBox_medium.setCurrentIndex(oidx)
-    assert not wsl.doubleSpinBox_visc.isReadOnly(), "Should be editable"
-    assert wsl.doubleSpinBox_visc.isEnabled(), "Should be editable"
-
-
-def test_switch_and_update(qtbot):
+def test_switch_and_update_chip_region(qtbot):
     mw = ShapeOut2()
     qtbot.addWidget(mw)
 
@@ -153,3 +170,69 @@ def test_switch_and_update(qtbot):
         path2.unlink()
     except BaseException:
         pass
+
+
+def test_switch_and_update_medium(qtbot):
+    mw = ShapeOut2()
+    qtbot.addWidget(mw)
+
+    # add fake measurement
+    path1 = make_dataset(medium="CellCarrier", temp=22.5, temp_range=[22, 23])
+    path2 = make_dataset(medium="UserDefined", temp=22.5, temp_range=[22, 23])
+
+    slot_id1, slot_id2 = mw.add_dataslot(paths=[path1, path2])
+    wsl = mw.widget_ana_view.widget_slot
+
+    # select the first slot
+    em1 = mw.block_matrix.get_widget(slot_id=slot_id1)
+    em2 = mw.block_matrix.get_widget(slot_id=slot_id2)
+    qtbot.mouseClick(em1.toolButton_modify, QtCore.Qt.LeftButton)
+    # set temperature manually
+    idm = wsl.comboBox_temp.findData("manual")
+    wsl.comboBox_temp.setCurrentIndex(idm)
+    assert wsl.comboBox_temp.currentData() == "manual"
+    wsl.doubleSpinBox_temp.setValue(20.0)
+    assert wsl.doubleSpinBox_temp.value() == 20
+    qtbot.mouseClick(wsl.pushButton_apply, QtCore.Qt.LeftButton)
+    QtWidgets.QApplication.processEvents()
+    # check whether that worked
+    assert wsl.get_dataset(
+    ).config["calculation"]["emodulus temperature"] == 20
+
+    # switch to the second (user-defined medium) measurement
+    qtbot.mouseClick(em2.toolButton_modify, QtCore.Qt.LeftButton)
+    assert wsl.comboBox_medium.currentData() == "UserDefined"
+    assert not wsl.doubleSpinBox_visc.isReadOnly(), "Should be editable"
+    assert wsl.doubleSpinBox_visc.isEnabled(), "Should be editable"
+    assert not wsl.doubleSpinBox_temp.isEnabled(), "Should not be editable"
+    # now switch back
+    qtbot.mouseClick(em1.toolButton_modify, QtCore.Qt.LeftButton)
+
+    # This is the actual test
+    assert wsl.doubleSpinBox_temp.value() == 20
+    assert wsl.doubleSpinBox_temp.isEnabled(), "Should be editable"
+
+    try:
+        path1.unlink()
+        path2.unlink()
+    except BaseException:
+        pass
+
+
+def test_user_defined_medium_should_work(qtbot):
+    mw = ShapeOut2()
+    qtbot.addWidget(mw)
+    # add fake measurement
+    path1 = make_dataset(medium="MyMedium")
+    mw.add_dataslot(paths=[path1])
+    wsl = mw.widget_ana_view.widget_slot
+    ds = mw.pipeline.slots[0].get_dataset()
+    assert ds.config["setup"]["medium"] == "MyMedium", "sanity check"
+    assert wsl.comboBox_medium.currentData() == "MyMedium"
+    assert not wsl.doubleSpinBox_visc.isReadOnly(), "Should be editable"
+    assert wsl.doubleSpinBox_visc.isEnabled(), "Should be editable"
+    wsl.doubleSpinBox_visc.setValue(12.1)
+    assert wsl.__getstate__()["emodulus"]["emodulus viscosity"] == 12.1
+    assert np.isnan(wsl.__getstate__()["emodulus"]["emodulus temperature"])
+    assert wsl.__getstate__()["emodulus"]["emodulus medium"] == "MyMedium"
+    assert wsl.__getstate__()["emodulus"]["emodulus scenario"] is None
