@@ -1,4 +1,5 @@
 2.2.6
+ - fix: support user-defined media introduced in dclab 0.29.1 (#53)
  - docs: update bibliography
  - bump dclab from 0.29.0 to 0.29.1
 2.2.5
